--- a/CourseWeb/package.json
+++ b/CourseWeb/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "reactstrap": "^9.2.3"
   },
   "scripts": {
