--- a/CourseWeb/package.json
+++ b/CourseWeb/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.1",
     "alertifyjs": "^1.14.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
