--- a/DataLayer/CourseApi.DataLayer.csproj
+++ b/DataLayer/CourseApi.DataLayer.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
 	  <PackageReference Include="AutoMapper" Version="13.0.1" />
+	  <PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.3.4" />
+	  <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.4" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
