--- a/CourseApi/appsettings.Development.json
+++ b/CourseApi/appsettings.Development.json
@@ -11,8 +11,8 @@
   "TokenOption": {
     "Audience": [ "http://localhost:7001" ],
     "Issuer": "http://localhost:7001",
-    "AccessTokenExpiration": 3600,
-    "RefreshTokenExpiration": 600,
+    "AccessTokenExpiration": 10,  // 10 minutes
+    "RefreshTokenExpiration": 10080, // 7 days
     "SecurityKey": "veryveryveryveryveryveryVeryveryVeryVerySecretKey"
   }
 }
