--- a/CourseApi/appsettings.Development.json
+++ b/CourseApi/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "CourseDbConnection": "Data Source=LAPTOP-061MDE8T;Initial Catalog=Inveon.CourseDb2;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "CourseDbConnection": "Data Source=LAPTOP-061MDE8T;Initial Catalog=Inveon.CourseDb4;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "Redis": "localhost:6379"
   },
   "TokenOption": {
     "Audience": [ "http://localhost:7001" ],
