--- a/Services/CourseApi.Service.csproj
+++ b/Services/CourseApi.Service.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CourseApi.Cache\CourseApi.Cache.csproj" />
     <ProjectReference Include="..\CourseApi.Messaging\CourseApi.Messaging.csproj" />
     <ProjectReference Include="..\DataLayer\CourseApi.DataLayer.csproj" />
   </ItemGroup>
